--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <main>
         <!-- LEFT SECTION: Image Upload -->
         <section class="upload-section flex-column">
-          <h2 class="section-title">📤 Upload Image</h2>
+          <h2 class="section-title">Upload Image</h2>
           
           <button
             id="image-input-area"
@@ -98,7 +98,7 @@
           id="output-section"
           class="output-section flex-column"
         >
-          <h2 class="section-title">📝 Description Output</h2>
+          <h2 class="section-title">Description</h2>
           
           <div id="description-content" class="flex-column description-content">
             <div class="speak-controls">
