--- a/index.html
+++ b/index.html
@@ -157,6 +157,6 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
